--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ finals/py/Game4/.ipynb_checkpoints/Game_4-checkpoint.ipynb
 finals/py/Game5/.ipynb_checkpoints/Game_5-checkpoint.ipynb
 finals/py/Game6/.ipynb_checkpoints/Game_6-checkpoint.ipynb
 finals/py/Game7/.ipynb_checkpoints/Game_7-checkpoint.ipynb
+finals/py/Game1/mapbox_token.txt
