updating game data

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,12 @@ finals/py/Game5/.ipynb_checkpoints/Game_5-checkpoint.ipynb
 finals/py/Game6/.ipynb_checkpoints/Game_6-checkpoint.ipynb
 finals/py/Game7/.ipynb_checkpoints/Game_7-checkpoint.ipynb
 finals/py/Game1/mapbox_token.txt
+finals/py/Game2/mapbox_token.txt
+finals/py/Game2/mapbox_token.txt
+finals/py/Game3/mapbox_token.txt
+finals/py/Game4/mapbox_token.txt
+finals/py/Game2/mapbox_token.txt
+finals/py/Game5/mapbox_token.txt
+finals/py/Game6/mapbox_token.txt
+finals/py/Game7/mapbox_token.txt
+finals/py/Game2/mapbox_token.txt
