--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ finals/py/Game5/mapbox_token.txt
 finals/py/Game6/mapbox_token.txt
 finals/py/Game7/mapbox_token.txt
 finals/py/Game2/mapbox_token.txt
+finals/py/mapbox_token.txt
