Pushing New Capstone Work
Includes data collection, all events, and event sequences leading to goals.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ finals/py/Game4/.ipynb_checkpoints/Game_4-checkpoint.ipynb
 finals/py/Game5/.ipynb_checkpoints/Game_5-checkpoint.ipynb
 finals/py/Game6/.ipynb_checkpoints/Game_6-checkpoint.ipynb
 finals/py/Game7/.ipynb_checkpoints/Game_7-checkpoint.ipynb
+finals/py/Game2/.ipynb_checkpoints/Events&GoalSequences-checkpoint.ipynb
+finals/py/Game3/.ipynb_checkpoints/Events&GoalSequences-checkpoint.ipynb
+finals/py/Game4/.ipynb_checkpoints/Events&GoalSequences-checkpoint.ipynb
+finals/py/Game1/.ipynb_checkpoints/Event_Sequences_Game1-checkpoint.ipynb
+finals/py/Game1/.ipynb_checkpoints/Events&GoalSequences-checkpoint.ipynb
+finals/py/.ipynb_checkpoints/From_PoCh_to_GOAL-checkpoint.ipynb
+finals/py/Game5/.ipynb_checkpoints/Events&GoalSequences-checkpoint.ipynb
+finals/py/Game6/.ipynb_checkpoints/Events&GoalSequences-checkpoint.ipynb
+finals/py/Game7/.ipynb_checkpoints/Events&GoalSequences-checkpoint.ipynb
